--- a/src/NServiceBus.Transport.Msmq/NServiceBus.Transport.Msmq.csproj
+++ b/src/NServiceBus.Transport.Msmq/NServiceBus.Transport.Msmq.csproj
@@ -1,31 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net452</TargetFramework>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\NServiceBus.snk</AssemblyOriginatorKeyFile>
-    <OutputPath>..\..\binaries\</OutputPath>
-    <Description>MSMQ support for NServiceBus</Description>
-    <!-- Disable NU5111 and NU5110 as CreateQueues.ps1 and DeleteQueues.ps1 scripts are intentionally not put into the tools folder. -->
-    <NoWarn>$(NoWarn);NU5110;NU5111</NoWarn>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.1</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="System.Messaging" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="NServiceBus" Version="[7.0.0, 8.0.0)" />
-    <PackageReference Include="Particular.Packaging" Version="0.2.1" PrivateAssets="All" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="InstanceMapping\endpoints.xsd" />
-    <EmbeddedResource Include="InstanceMapping\endpoints.xsd" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Scripts\*.*" Pack="true" PackagePath="build\%(Filename)%(Extension)" />
+    <PackageReference Include="NServiceBus" Version="7.1.6" />
   </ItemGroup>
 
 </Project>
